# AGCMS

./: .dockerignore  .env.example  .gitignore  AGCMS_Complete_Build_Guide.md  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml  linear-design-md.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
agcms-audit/: Dockerfile  requirements.txt
agcms-audit/agcms/: db.py
agcms-auth/: Dockerfile  requirements.txt
agcms-common/: requirements.txt
agcms-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
agcms-dashboard/e2e/: dashboard.spec.ts
agcms-dashboard/src/: App.tsx  index.css
agcms-gateway/: Dockerfile  requirements.txt
agcms-injection/: Dockerfile  requirements.txt
agcms-injection/ml/: evaluate.py  export_onnx.py  generate_dataset.py  requirements.txt  train.py
agcms-pii/: Dockerfile  requirements.txt
agcms-policy/: Dockerfile  requirements.txt
agcms-response/: Dockerfile  requirements.txt
agcms-tenant/: Dockerfile
database/: init.sql  run-migrations.sh
database/migrations/: 002_hash_chained_audit.sql  003_signing_key_rotation.sql  004_workos_sso.sql  005_mfa.sql  006_tenant_keys.sql  007_api_key_scopes.sql  008_auth_sessions.sql  009_gdpr_purge.sql  010_onboarding_state.sql  011_demo_mode.sql  012_notifications.sql  013_incident_workflow.sql  014_byok.sql
docs/: ablation-study.md  security-audit.md
docs-site/: README.md  concepts.mdx  faq.mdx  introduction.mdx  mint.json  openapi.yaml  quickstart.mdx
docs-site/api-reference/: openapi.mdx
docs-site/audit/: architecture.mdx  bundles.mdx  verification.mdx
docs-site/changelog/: overview.mdx
docs-site/compliance/: eu-ai-act.mdx  gdpr.mdx  hipaa.mdx  nist-ai-rmf.mdx  pci-dss.mdx  soc2.mdx
docs-site/integrations/: anthropic.mdx  langchain.mdx  notifications.mdx  openai.mdx
docs-site/sdk/: python.mdx  typescript.mdx
docs/curl/: quickstart.md
docs/postman/: AGCMS.postman_collection.json
examples/: README.md
examples/anthropic-wrapped/: main.py
examples/langchain-wrapped/: main.py
examples/next-js-server-actions/: package.json
examples/openai-wrapped/: main.py  requirements.txt
infra/grafana/: README.md
infra/prometheus/: prometheus.yml
k8s/: configmap.yaml  gateway.yaml  ingress.yaml  injection.yaml  namespace.yaml  pii.yaml  postgres.yaml  redis.yaml  secrets.yaml  services.yaml
k8s/cert-manager/: README.md  cluster-issuer-prod.yaml  cluster-issuer-staging.yaml
k8s/external-secrets/: README.md  cluster-secret-store-aws.yaml  external-secret-agcms.yaml
k8s/sealed-secrets/: README.md
marketing/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
policies/: default.yaml
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/agcms/: __init__.py  _client.py  _errors.py  _wrap.py  cli.py  verifier.py
sdk/python/tests/: test_client.py
tests/: conftest.py
tools/: soc2_evidence.py  verify.py
(+328 files in other folders)
