[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agcms"
version = "0.1.2"
description = "Official Python SDK for AGCMS — AI Governance & Compliance Monitoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "S Dheeran", email = "dheeran.karna@gmail.com" }]
keywords = ["llm", "governance", "compliance", "openai", "audit", "pii"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.24,<1.0",
]

[project.optional-dependencies]
verify = ["cryptography>=41.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.scripts]
agcms = "agcms.cli:main"

[project.urls]
Homepage = "https://agcms-six.vercel.app"
Documentation = "https://uip-f4b0bbe5.mintlify.app"
Source = "https://github.com/Dheeran-git/AGCMS"
Changelog = "https://github.com/Dheeran-git/AGCMS/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agcms*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
